--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.3.0",
     "carbon-components": "^10.36.0",
     "carbon-components-react": "^8.31.3",
+    "cross-env": "^7.0.3",
     "env-cmd": "^10.1.0",
     "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
@@ -53,7 +54,7 @@
     "fbjs": "3.0.4"
   },
   "scripts": {
-    "start": "PORT=$PORT_FE react-scripts start --openssl-legacy-provider",
+    "start": "cross-env REACT_APP_API_SERVER_URI=http://localhost:50000/ REACT_APP_TORNJAK_MANAGER=true PORT=3000 react-scripts start --openssl-legacy-provider",
     "build": "react-scripts build",
     "build:staging": "env-cmd -f .env.staging npm run build",
     "test": "react-scripts test -env=jsdom",
@@ -99,13 +100,13 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.2.2",
     "jest-transform-stub": "^2.0.0",
+    "markdownlint-cli2": "^0.7.1",
     "moxios": "^0.4.0",
     "nodemon": "^2.0.13",
     "puppeteer": "^22.11.2",
     "react-inject-env": "^2.1.0",
     "react-test-renderer": "^18.2.0",
-    "redux-mock-store": "^1.5.4",
-    "markdownlint-cli2": "^0.7.1"
+    "redux-mock-store": "^1.5.4"
   },
   "jest": {
     "moduleNameMapper": {
